--- a/RayCarrot.WPF/RayCarrot.WPF.csproj
+++ b/RayCarrot.WPF/RayCarrot.WPF.csproj
@@ -196,12 +196,6 @@
     <Folder Include="Controls\Registry\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Carrot Framework Extensions\RayCarrot.Windows.Shell\RayCarrot.Windows.Shell.csproj">
-      <Project>{55f49d1e-c9bd-4cc4-9ff0-d646d9f42a21}</Project>
-      <Name>RayCarrot.Windows.Shell</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <PackageReference Include="Microsoft-WindowsAPICodePack-Shell">
       <Version>1.1.3.3</Version>
     </PackageReference>
@@ -215,11 +209,26 @@
       <Version>3.0.1</Version>
     </PackageReference>
     <PackageReference Include="RayCarrot.CarrotFramework">
-      <Version>2.3.0</Version>
+      <Version>3.0.2</Version>
+    </PackageReference>
+    <PackageReference Include="RayCarrot.CarrotFramework.Abstractions">
+      <Version>1.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="RayCarrot.IO">
+      <Version>1.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="RayCarrot.UI">
+      <Version>1.0.2</Version>
     </PackageReference>
     <PackageReference Include="RayCarrot.Windows.Registry">
-      <Version>2.1.2</Version>
+      <Version>3.0.0</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Carrot Framework\RayCarrot.Windows.Shell\RayCarrot.Windows.Shell.csproj">
+      <Project>{55f49d1e-c9bd-4cc4-9ff0-d646d9f42a21}</Project>
+      <Name>RayCarrot.Windows.Shell</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
