--- a/RayCarrot.WPF/RayCarrot.WPF.csproj
+++ b/RayCarrot.WPF/RayCarrot.WPF.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Controls\BrowseBox\BrowseTypes.cs" />
     <Compile Include="Controls\Dialogs\DialogBaseSize.cs" />
     <Compile Include="Controls\Dialogs\IDialogBaseControl.cs" />
+    <Compile Include="Converters\BooleanToVisibilityHiddenConverter.cs" />
     <Compile Include="Converters\GetDescendantByTypeConverter.cs" />
     <Compile Include="Converters\IsNotTypeToVisibilityConverter.cs" />
     <Compile Include="Converters\IsTypeToVisibilityConverter.cs" />
@@ -206,22 +207,22 @@
       <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="PropertyChanged.Fody">
-      <Version>3.0.1</Version>
+      <Version>3.1.3</Version>
     </PackageReference>
     <PackageReference Include="RayCarrot.CarrotFramework">
-      <Version>3.0.2</Version>
+      <Version>3.0.4</Version>
     </PackageReference>
     <PackageReference Include="RayCarrot.CarrotFramework.Abstractions">
-      <Version>1.0.3</Version>
+      <Version>1.0.4</Version>
     </PackageReference>
     <PackageReference Include="RayCarrot.IO">
-      <Version>1.0.1</Version>
+      <Version>1.0.5</Version>
     </PackageReference>
     <PackageReference Include="RayCarrot.UI">
-      <Version>1.0.2</Version>
+      <Version>1.0.3</Version>
     </PackageReference>
     <PackageReference Include="RayCarrot.Windows.Registry">
-      <Version>3.0.0</Version>
+      <Version>3.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
