--- a/RayCarrot.WPF/RayCarrot.WPF.csproj
+++ b/RayCarrot.WPF/RayCarrot.WPF.csproj
@@ -210,23 +210,23 @@
       <Version>3.1.3</Version>
     </PackageReference>
     <PackageReference Include="RayCarrot.CarrotFramework">
-      <Version>3.0.5</Version>
+      <Version>3.1.1</Version>
     </PackageReference>
     <PackageReference Include="RayCarrot.CarrotFramework.Abstractions">
-      <Version>1.1.2</Version>
-    </PackageReference>
-    <PackageReference Include="RayCarrot.IO">
-      <Version>1.1.5</Version>
-    </PackageReference>
-    <PackageReference Include="RayCarrot.UI">
       <Version>1.1.3</Version>
     </PackageReference>
+    <PackageReference Include="RayCarrot.IO">
+      <Version>1.1.7</Version>
+    </PackageReference>
+    <PackageReference Include="RayCarrot.UI">
+      <Version>1.1.4</Version>
+    </PackageReference>
     <PackageReference Include="RayCarrot.Windows.Registry">
-      <Version>3.1.1</Version>
+      <Version>3.1.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Carrot Framework\RayCarrot.Windows.Shell\RayCarrot.Windows.Shell.csproj">
+    <ProjectReference Include="..\..\RayCarrot.CarrotFramework\RayCarrot.Windows.Shell\RayCarrot.Windows.Shell.csproj">
       <Project>{55f49d1e-c9bd-4cc4-9ff0-d646d9f42a21}</Project>
       <Name>RayCarrot.Windows.Shell</Name>
     </ProjectReference>
